[project]
name = "inferspeed"
version = "0.1.0"
description = "LLM Inference Speed Optimization - Mac Mini Edition"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "mlx>=0.20.0",
    "mlx-lm>=0.20.0",
    "psutil>=5.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
